# Project-CSC-473

./: README.md
assignment1-partA/: CMakeLists.txt
assignment1-partA/include/: CMakeLists.txt  Planet.hpp  QuadTree.hpp  SimpleGLScene.hpp  Universe.hpp
assignment1-partA/shaders/: CMakeLists.txt  ShaderPaths.hpp.in  circle.fs.glsl  circle.vs.glsl  references.fs.glsl  references.vs.glsl
assignment1-partA/source/: CMakeLists.txt  Planet.cpp  QuadTree.cpp  SimpleGL.cpp  SimpleGLScene.cpp  Universe.cpp
